--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="menu-toggle" class="menu-icon">☰</label>
 
             <a class="logo">
-                <img src="./images/pettyLogo.svg" alt="Petty Logo">
+                <img src="./Images/pettyLogo.svg" alt="Petty Logo">
             </a>
             <div class="navlinks">
                 <div class="click">
